# testv2ph

./: .env.example  .env_example  .gitignore  README.md  config.yaml  profiler.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yaml  python-publish.yml  unittest.bak
src/: bot.py  config.py  const.py  custom_logger.py  main.py  utils.py
src/web_bot/: __init__.py  base.py  drission_bot.py  get.py  selenium_bot.py
tests/: test_scraper.py
