[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "v2dl"
version = "0.1.0"
description = "V2DL downloader"
authors = ["ZhenShuo2021 <leo01412123@gmail.com>"]
readme = "README.md"
license = "MIT"
# include = ["config.yaml", ".env.example"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
DrissionPage = "4.1.0.9"
python-dotenv = "^1.0.1"
requests = "^2.32.0"
selenium = "^4.25.0"
lxml = "^5.3.0"
PyYAML = "^6.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.17.4"
black = "^23.7.0"

[tool.poetry.scripts]
v2dl = "v2dl.v2dl:main"


[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "C0111", # missing-docstring
    "C0114", # missing module docstring
    "C0115", # missing class docstring
    "C0116", # missing function docstring
]

[tool.black]
line-length = 100
